improvement(filter): Implements Serviceplanet-API changes for login-requests
Since serviceplanet 9.6 the Login-API has changed. The tenant-selection is not possible during login any more.
This API-change is NOT backwards compatible with older Serviceplanet versions.
